--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,11 @@
-
-
-add_executable(runnermodeltest runnermodeltest.cpp ../src/declarative/runnermodel.cpp mainrunner.cpp filtermodel.cpp pinyin.cpp searchwidget.cpp res.qrc)
-target_link_libraries(runnermodeltest Qt5::Widgets KF5::Service KF5Runner)
+add_executable(runnermodeltest
+    runnermodeltest.cpp
+    ../src/declarative/runnermodel.cpp
+    mainrunner.cpp
+    filtermodel.cpp
+    pinyin.cpp
+    settingmodel.cpp
+    res.qrc)
+target_link_libraries(runnermodeltest Qt5::Widgets KF5::Service KF5Runner Qt5::Xml)
 #ecm_mark_as_test(runnermodeltest)
 
-add_executable(runnertest runnertest.cpp)
-target_link_libraries(runnertest Qt5::Widgets KF5::Runner)
-#ecm_mark_as_test(runnertest)
