fix:全局搜索搜不到系统设置下的“手写笔”条目 link:http://172.17.66.192/biz/bug-view-39845.html

--- a/src/ControlCenterSettingsSearch/assets/search.conf
+++ b/src/ControlCenterSettingsSearch/assets/search.conf
@@ -30,4 +30,5 @@ Printer=ukui-control-center --printers
 Mouse=ukui-control-center --mouse
 Touchpad=ukui-control-center --trackpad
 About=ukui-control-center --about
+Pen=ukui-control-center --pen
 
