修改部分设置项搜索条目

--- a/src/ControlCenterSettingsSearch/assets/search.conf
+++ b/src/ControlCenterSettingsSearch/assets/search.conf
@@ -26,7 +26,7 @@ Area=ukui-control-center --language
 Backup=ukui-control-center --recovery
 Saveeye=ukui-control-center --saveeye
 Display=ukui-control-center --displays
-Printer=ukui-control-center --printers
+Printer=ukui-control-center --printer
 Mouse=ukui-control-center --mouse
 Touchpad=ukui-control-center --trackpad
 About=ukui-control-center --about
